--- a/email-base.html
+++ b/email-base.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -61,11 +61,11 @@
 	<!-- Email Body -->
 	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
 		<tr>
-			<td align="center" valign="top">
+			<td align="center" valign="top" id="emailContainer">
 				<!-- Email Container -->
 				<table border="0" cellpadding="0" cellspacing="0" width="600">
 					<tr>
-						<td align="center" valign="top">
+						<td align="center" valign="top" id="headerContainer">
 							<!-- Email Header -->
 							<table border="0" cellpadding="0" cellspacing="0" width="100%">
 								<tr>
@@ -83,7 +83,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td align="center" valign="top">
+						<td align="center" valign="top" id="contentContainer">
 							<!-- Email Body -->
 							<table border="0" cellpadding="0" cellspacing="0" width="100%">
 								<tr>
@@ -96,7 +96,7 @@
 						</td>
 					</tr>
 					<tr>
-						<td align="center" valign="top">
+						<td align="center" valign="top" id="footerContainer">
 							<!-- Email Footer -->
 							<table border="0" cellpadding="0" cellspacing="0" width="100%">
 								<tr>
@@ -109,7 +109,7 @@
 						</td>
 					</tr>
 				</table>
-				<!-- End Table Container -->
+				<!-- End Email Container -->
 			</td>
 		</tr>
 	</table>
