--- a/email-base.html
+++ b/email-base.html
@@ -7,35 +7,35 @@
 	
 	<style type="text/css">
 
-		/* Resets */
+		/* Reset styles for email clients */
+		
+		a img{border:0 none;}
 
-		body{ margin:0; padding:0;}
+		a[href^="tel"], a[href^="sms"] {text-decoration:none; color:#333 !important; pointer-events:auto; cursor:default;} /* Phone link, use as wrapper on phone numbers */
 
+		.autoLink a { color:#58585b; text-decoration:none; cursor:default; }
 
-		.ExternalClass{width:100%;} /* Force Hotmail to display emails at full width */  
+		body, #bodyTable, #bodyCell{height:100% !important; margin:0; padding:0; width:100% !important;}
+
+		body, table, td, p, a, li, blockquote{-ms-text-size-adjust:100%; -webkit-text-size-adjust:100%;} /* Prevents Windoes and Webkit-based mobile platforms from changing declared font sizes */ 
+
+		div, p, a, li, td { -webkit-text-size-adjust:none; } /*  Override the default font sizes on Webkit-based email clients */
+
+		.ExternalClass{width:100%;} .ReadMsgBody{width: 100%;} /* Force Hotmail to display emails at full width */  
 
 		.ExternalClass, .ExternalClass p, .ExternalClass span, .ExternalClass font, .ExternalClass td, .ExternalClass div{line-height: 100%;} /* Forces Hotmail to display normal line spacing */
+
+		h1, h2, h3, h4, h5, h6{margin:0; padding:0;} /* Remove default margin and padding*/
 		
-		#outlook a{ padding:0; } /* Force Outlook to provide a "view in browser" menu link. */
+		#outlook a{padding:0;} /* Force Outlook to provide a "view in browser" menu link. */
 		
 		table td {border-collapse:collapse;} /* Outlook 07, 10 padding issue fix */
 		
 		table{ border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;} /* remove spacing around Outlook 07, 10 tables */
-		
-		div, p, a, li, td { -webkit-text-size-adjust:none; } /*  override the default font sizes on Webkit-based email clients */
 
-		/* bring inline */
-		img {outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; border:0 none; height:auto; line-height:100%; outline:none; text-decoration:none;}
+		img {outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; border:0 none; height:auto; line-height:100%; outline:none; text-decoration:none;} /* Forces images to be inline */
 
-		a img{border:0 none;}
-
-		#bodyTable{height:100% !important; margin:0; padding:0; width:100% !important;}
-
-		a[href^="tel"], a[href^="sms"] {text-decoration:none; color:#333 !important; pointer-events:auto; cursor:default;} /* phone link, use as wrapper on phone numbers */
-
-		.autoLink a { color:#58585b; text-decoration:none; cursor:default; }
-
-		/* Style to be inlines */
+		/* General email styles */
 		
 
 	</style>
@@ -61,9 +61,9 @@
 	<!-- Email Body -->
 	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
 		<tr>
-			<td align="center" valign="top" id="emailContainer">
+			<td align="center" valign="top" id="bodyCell">
 				<!-- Email Container -->
-				<table border="0" cellpadding="0" cellspacing="0" width="600">
+				<table border="0" cellpadding="0" cellspacing="0" width="600" id="emailContainer">
 					<tr>
 						<td align="center" valign="top" id="headerContainer">
 							<!-- Email Header -->
