Added <center> to ensure center email structure

--- a/email-base.html
+++ b/email-base.html
@@ -69,60 +69,62 @@
 </head>
 
 <body>
-	<!-- Email Body -->
-	<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
-		<tr>
-			<td align="center" valign="top" id="bodyCell">
-				<!-- Email Container -->
-				<table border="0" cellpadding="0" cellspacing="0" width="600" id="emailContainer">
-					<tr>
-						<td align="center" valign="top" id="headerContainer">
-							<!-- Email Header -->
-							<table border="0" cellpadding="0" cellspacing="0" width="100%">
-								<tr>
-									<td>
-										<a href="#">View this email in your browser</a>
-									</td>
-								</tr>
-								<tr>
-									<td align="center" valign="top">
-										<!-- Header content goes Here -->
-									</td>
-								</tr>
-							</table>
-							<!-- End Email Header -->
-						</td>
-					</tr>
-					<tr>
-						<td align="center" valign="top" id="contentContainer">
-							<!-- Email Body -->
-							<table border="0" cellpadding="0" cellspacing="0" width="100%">
-								<tr>
-									<td align="center" valign="top">
-										<!-- Body content goes here -->
-									</td>
-								</tr>
-							</table>
-							<!-- End Email Body -->
-						</td>
-					</tr>
-					<tr>
-						<td align="center" valign="top" id="footerContainer">
-							<!-- Email Footer -->
-							<table border="0" cellpadding="0" cellspacing="0" width="100%">
-								<tr>
-									<td align="center" valign="top">
-										<!-- Footer content goes here -->
-									</td>
-								</tr>
-							</table>
-							<!-- Table Footer -->
-						</td>
-					</tr>
-				</table>
-				<!-- End Email Container -->
-			</td>
-		</tr>
-	</table>
-	<!-- End Email Body -->
+	<center>
+		<!-- Email Body -->
+		<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
+			<tr>
+				<td align="center" valign="top" id="bodyCell">
+					<!-- Email Container -->
+					<table border="0" cellpadding="0" cellspacing="0" width="600" id="emailContainer">
+						<tr>
+							<td align="center" valign="top" id="headerContainer">
+								<!-- Email Header -->
+								<table border="0" cellpadding="0" cellspacing="0" width="100%">
+									<tr>
+										<td>
+											<a href="#">View this email in your browser</a>
+										</td>
+									</tr>
+									<tr>
+										<td align="center" valign="top">
+											<!-- Header content goes Here -->
+										</td>
+									</tr>
+								</table>
+								<!-- End Email Header -->
+							</td>
+						</tr>
+						<tr>
+							<td align="center" valign="top" id="contentContainer">
+								<!-- Email Body -->
+								<table border="0" cellpadding="0" cellspacing="0" width="100%">
+									<tr>
+										<td align="center" valign="top">
+											<!-- Body content goes here -->
+										</td>
+									</tr>
+								</table>
+								<!-- End Email Body -->
+							</td>
+						</tr>
+						<tr>
+							<td align="center" valign="top" id="footerContainer">
+								<!-- Email Footer -->
+								<table border="0" cellpadding="0" cellspacing="0" width="100%">
+									<tr>
+										<td align="center" valign="top">
+											<!-- Footer content goes here -->
+										</td>
+									</tr>
+								</table>
+								<!-- Table Footer -->
+							</td>
+						</tr>
+					</table>
+					<!-- End Email Container -->
+				</td>
+			</tr>
+		</table>
+		<!-- End Email Body -->
+	</center>
 </body>
