Small base teamplte adjustments

--- a/email-base.html
+++ b/email-base.html
@@ -12,11 +12,11 @@
 
 		a[href^="tel"], a[href^="sms"] {text-decoration:none; color:#333 !important; pointer-events:auto; cursor:default;} /* Phone link, use as wrapper on phone numbers */
 
-		.autoLink a { color:#58585b; text-decoration:none; cursor:default; }
+		.autoLink a {color:#58585b; text-decoration:none; cursor:default;}
 
 		body, #bodyTable, #bodyCell{height:100% !important; margin:0; padding:0; width:100% !important;}
 
-		body, table, td, p, a, li, blockquote{-ms-text-size-adjust:100%; -webkit-text-size-adjust:100%;} /* Prevents Windoes and Webkit-based mobile platforms from changing declared font sizes */ 
+		body, table, td, p, a, li, blockquote{-ms-text-size-adjust:100%; -webkit-text-size-adjust:100%;} /* Prevents Windows and Webkit-based mobile platforms from changing declared font sizes */ 
 
 		div, p, a, li, td { -webkit-text-size-adjust:none; } /*  Override the default font sizes on Webkit-based email clients */
 
