--- a/base-email-template.html
+++ b/base-email-template.html
@@ -32,6 +32,8 @@
 		
 		table{ border-collapse:collapse; mso-table-lspace:0pt; mso-table-rspace:0pt;} /* remove spacing around Outlook 07, 10 tables */
 
+		span.preheader { display:none !important; visibility:hidden; mso-hide:all; font-size:1px; color:transparent; line-height:1px; max-height:0px; max-width:0px; opacity:0; overflow:hidden; }
+
 		img {outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; border:0 none; height:auto; line-height:100%; outline:none; text-decoration:none;} /* Forces images to be inline */
 
 		/* General email styles */
@@ -69,6 +71,11 @@
 </head>
 
 <body>
+	<!-- Pre-header -->
+	<span class="preheader">
+		
+	</span>
+	<!-- End of Pre-header -->
 	<center>
 		<!-- Email Body -->
 		<table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
