--- a/base-email-template.html
+++ b/base-email-template.html
@@ -34,7 +34,7 @@
 
 		span.preheader { display:none !important; visibility:hidden; mso-hide:all; font-size:1px; color:transparent; line-height:1px; max-height:0px; max-width:0px; opacity:0; overflow:hidden; }
 
-		img {outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; border:0 none; height:auto; line-height:100%; outline:none; text-decoration:none;} /* Forces images to be inline */
+		img {outline:none; text-decoration:none; -ms-interpolation-mode:bicubic; border:0 none; height:auto; line-height:100%; outline:none; text-decoration:none; padding: 0; margin: 0; display: block !important;} /* Forces images to be inline */
 
 		/* General email styles */
 		
